wip: add a beautiful ui with server sent events
