# api/server/go/go/model_instance_event.go
@@ -1,0 +1,19 @@
+/*
+ * Cloudburst
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type InstanceEvent struct {
+
+	Type string `json:"type"`
+
+	Target string `json:"target"`
+
+	Data Instance `json:"data"`
+}
